Margins fixed to prevent footer from covering content

--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -2,6 +2,9 @@ img{
   width:100px;
   height:100px;
 }
+main{
+  margin-bottom:75px;
+}
 .appTitleLink{
   color:white;
   text-decoration: none;
